SERVER-106952 Sharding an existing viewless timeseries fails due to missing index supporting the shard key (#38286)

GitOrigin-RevId: 18db3516f9925414d0b9f95574d28bb55f0a185b